// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Home should display loading when loading it true 1`] = `
<div
  className="home"
>
  <ConnectFunction />
  <Loading />
</div>
`;

exports[`Home Home should match snap shot 1`] = `
<div
  className="home"
>
  <ConnectFunction />
  <div
    className="home-main"
  >
    <ConnectFunction />
    <ConnectFunction />
  </div>
</div>
`;
